--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,46 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Courier New', monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  text-align: center;
+  background-image: url("./img/background.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.main{
+  background-color: rgba(252, 252, 252, 0.916);
+  height: 500px ;
+  text-align: center;
+  margin: 50px 150px;
+  border: 3.5px gray solid;
+  border-radius: 15px;
+  box-shadow: 2px 4px 7px rgba(0,0,0,0.3);
+}
+#title{
+  background-color: rgba(254, 254, 254, 0.836);
+  width: 40%;
+  margin: auto;
+  font-weight: bold;
+  font-size: 40px !important;
+  text-shadow: 2px 4px 3px rgba(0,0,0,0.3);
+}
+.logo{
+  text-align: center;
+  margin: auto;
+  padding-left: 20px;
+}
+
+footer {
+  height: 200px;
+}
+
+.result h1{
+  font-weight: bold;
 }
